--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "version": "0.1.0a0",
     "devDependencies": {
-        "npm-run-all": "^4.1.5",
         "cross-env": "^7.0.3",
-        "husky": "^8.0.0"
+        "husky": "^8.0.0",
+        "npm-run-all": "^4.1.5"
     },
     "scripts": {
         "start": "pyright && pytest && yarn style",
-        "test": "nodemon -w tests -w src -e .py -x cross-env LOGURU_LEVEL=TRACE rye run pytest",
+        "test": "nodemon -w tests -w src -e .py -x cross-env LOGURU_LEVEL=TRACE rye run pytest -k test_deeplx_tr",
         "publish": "rye build && rye publish",
         "pyright": "nodemon -w deeplx_tr -w .venv -e .py -x pyright deeplx_tr tests",
         "pytest": "nodemon -w tests -w deeplx_tr -e .py -x pytest tests deeplx_tr",
