--- a/.github/workflows/routine-tests.yml
+++ b/.github/workflows/routine-tests.yml
@@ -8,7 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.10', '3.12']
+        # python-version: ['3.8', '3.10', '3.12']
+        python-version: ['3.8', '3.10']
         # poetry-version: [1.5.1]
         # os: [ubuntu-20.04, macos-latest, windows-latest]
         os: [ubuntu-latest]
