--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "httpx>=0.27.0",
     "pyperclip>=1.8.2",
     "set_loglevel>=0.1.2",
+    "nest-asyncio>=1.6.0",
+    "diskcache>=5.6.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -33,6 +35,7 @@ dev-dependencies = [
     "ipython>=8.12.3",
     "ruff>=0.3.5",
     "pytest-asyncio>=0.23.6",
+    "ycecream>=1.3.17",
 ]
 
 [tool.hatch.metadata]
