--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "loadtext>=0.0.3",
     "pyquery>=2.0.0",
     "openai>=1.35.3",
+    "python-docx>=1.1.2",
+    "python-dotenv>=1.0.1",
+    "langchain-openai>=0.1.14",
+    "langchain>=0.2.6",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -34,11 +38,14 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = [
-    "pytest>=8.1.1",
+    "pytest>=8.2.2",
     "ipython>=8.12.3",
     "ruff>=0.3.5",
-    "pytest-asyncio>=0.23.6",
+    "pytest-asyncio>=0.23.7",
     "ycecream>=1.3.17",
+    "pylint>=3.2.4",
+    "pytest-timeout>=2.3.1",
+    "python-run-cmd>=0.1.1",
 ]
 
 [tool.hatch.metadata]
