Update pyproject.toml 'python-magic-bin>=0.4.14; sys_platform == "win32"'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "langchain>=0.2.6",
     "taipy>=3.1.1",
     "python-magic>=0.4.27",
-    "python-magic-bin>=0.4.14",
+    'python-magic-bin>=0.4.14; sys_platform == "win32"',
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
