--- a/model-list.yml
+++ b/model-list.yml
@@ -6,8 +6,27 @@ base_url: https://newapi.dattw.eu.org
 # need to convert list entry to tuples for model_use_stats (collections. defaultdict)
 # models = [elm if instance(elm, str) else tuple(elm) for elm in models]
 # models = yaml.load(Path('model-list.yml').read_text(), Loader=yaml.Loader).get('models')
+
+# https://stackoverflow.com/questions/39553008/how-to-read-a-python-tuple-using-pyyaml
+# import yaml
+
+# def tuple_constructor(loader, node):
+    # return tuple(loader.construct_sequence(node))
+# yaml.SafeLoader.add_constructor('tag:yaml.org,2002:python/tuple',
+# tuple_constructor)
 # models = yaml.safe_load(Path('model-list.yml').read_text()).get('models')
+
 models:
+  - gpt-3.5-turbo-grun
+  - gpt-4o-grun
+  - gpt-3.5-turbo-chat2api
+  - gpt-4o-chat2api
+  - gpt-4-chat2api
+  - gpt-3.5-turbo-oracle2
+  - gpt-4o-oracle2
+  - gpt-3.5-turbo-oracle
+  - gpt-4o-oracle
+  - gpt-3.5-turbo-d2a
   - qwen-turbo-hf
   - qwen-max-hf
   - qwen-max-longcontext-hf
@@ -46,24 +65,17 @@ models:
   # - glm-3-turbo-bf
   - gpt-3.5-turbo-z
   - gpt-4-turbo-z
-
-  - gpt-3.5-turbo
-  - gpt-4o
-  # - gpt-4o-chat2api
-  - gpt-3.5-turbo-grun
-  - gpt-4o-grun
-  - gpt-3.5-turbo-grun2
-  - gpt-4o-grun2
-  - gpt-3.5-turbo-chat2api
-  - gpt-3.5-turbo-oracle2
-  - gpt-4o-oracle2
-  - gpt-3.5-turbo-oracle
-  - gpt-4o-oracle
-  - gpt-3.5-turbo-d2a
-
+  - !!python/tuple [gpt-3.5-turbo, https://duck2api.dattw.eu.org, any]
+  - !!python/tuple [gpt-3.5-turbo, https://duck2api1.dattw.eu.org, any]
+  - !!python/tuple [gpt-3.5-turbo, https://duck2api2.dattw.eu.org, any]
+  - !!python/tuple [gpt-3.5-turbo, https://duck2api-service-2nsfpsd6ca-uc.a.run.app, any]
   - !!python/tuple [gpt-3.5-turbo, https://duck2api-lovat.vercel.app, any]
   - !!python/tuple ['gpt-3.5-turbo', 'https://duck2api-u3l3laz3.b4a.run', 'any']
+  - !!python/tuple ['gpt-3.5-turbo', 'https://duck2api-3a2b982t.b4a.run', 'any']
   - !!python/tuple ['gpt-3.5-turbo', 'https://mikeee-duck2api.hf.space/hf', 'any']
-  - !!python/tuple ['gpt-3.5-turbo', 'https://sun-i-duck2api.hf.space/hf', 'any']
-  - !!python/tuple [gpt-3.5-turbo, https://Raimbault-duck2api.hf.space/hf, any]
-  - !!python/tuple ['gpt-3.5-turbo', 'https://gyxz-duck2api.hf.space/hf', 'any']
+  # - !!python/tuple ['gpt-3.5-turbo', 'https://sun-i-duck2api.hf.space/hf', 'any']
+  # - !!python/tuple [gpt-3.5-turbo, https://Raimbault-duck2api.hf.space/hf, any]
+  # - !!python/tuple ['gpt-3.5-turbo', 'https://gyxz-duck2api.hf.space/hf', 'any']
+  # - !!python/tuple ['gpt-3.5-turbo', 'https://gyxz-duck2api.hf.space/hf', 'any']
+
+  - !!python/tuple ['gpt-3.5-turbo', 'https://litellm.dattw.eu.org', 'any']
