--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "npm-run-all": "^4.1.5"
     },
     "scripts": {
-        "start": "pyright && pytest && yarn style",
+        "start": "nodemon -x rye run taipy run llm_tool.py",
+        "start1": "pyright && pytest && yarn style",
         "test": "nodemon -w tests -w src -e .py -x cross-env LOGURU_LEVEL=TRACE rye run pytest -k test_deeplx_tr",
         "publish": "rye build && rye publish",
         "pyright": "nodemon -w deeplx_tr -w .venv -e .py -x pyright deeplx_tr tests",
