--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,12 @@ dependencies = [
     "python-magic>=0.4.27",
     'python-magic-bin>=0.4.14; sys_platform == "win32"',
     "lmtr-agents>=0.1.0a2",
+    "streamlit>=1.38.0",
+    "python-box>=7.2.0",
+    "ycecream>=1.3.17",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.10"
 
 [project.scripts]
 "deeplx-tr" = "deeplx_tr.__main__:app"
