--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "streamlit>=1.38.0",
     "python-box>=7.2.0",
     "ycecream>=1.3.17",
+    "sentry-sdk[fastapi]>=2.17.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
