--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "python-box>=7.2.0",
     "ycecream>=1.3.17",
     "sentry-sdk[fastapi]>=2.17.0",
+    "marimo>=0.10.9",
+    "unsync>=1.4.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
@@ -63,6 +65,7 @@ allow-direct-references = true
 packages = ["src/deeplx_tr"]
 
 [tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "session"
 asyncio_mode = "auto"
 minversion = "6.0"
 # addopts = "-ra -q --doctest-modules -s"
@@ -72,4 +75,12 @@ log_cli = true
 testpaths = [
     "tests",
     # "integration",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "pytest-asyncio>=0.24.0",
+    "pytest-timeout>=2.3.1",
+    "pytest>=8.3.4",
+    "python-run-cmd>=0.1.1",
 ]
